examples/diagnostics/expected/1120-diagnostics-imported-reserved-type-name.stderr
error: 'i2' is a reserved type name and cannot be used as an identifier
  --> examples/diagnostics/1120-diagnostics-imported-reserved-type-name/mod.sx:11:5
   |
11 |     i2 := Box.{ total = 0, count = 0 };
   |     ^^
